--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -64,6 +64,7 @@ body {
   place-items: center;
   min-width: 100%;
   min-height: 100vh;
+  pointer-events: auto !important;
 
   #root {
     width: 100%;
